Attempt to fix tracklenth line overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,10 @@ li {
 	color: #999;
 }
 
+.clear-both {
+	clear: both;
+}
+
 /* Flex-box grid setup */
 
 .container {
